# adobe-color-swatch

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  Pipfile  README.md  mypy.ini  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  swatch.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  tests.yml
examples/: cmyk.aco  cmyk.csv  grayscale.aco  grayscale.csv  rgb.aco  rgb.csv  utf-new.aco  utf.aco  utf.csv
src/: enums.py  exceptions.py  swatch.py
swatch/: cli.py  swatch.py
tests/: cli_test.py  swatch_test.py  swatch_tests.py
