[metadata]
name = adobe_color_swatch
version = 1.0.0
description = Simple Python script to extract and generate Adobe Color Swatch (.aco) files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kdybicz/adobe-color-swatch
author = Kamil Dybicz
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Artistic Software
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Graphics Conversion

[options]
packages = find:
install_requires =
    importlib-metadata;python_version<"3.8"
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    swatch = swatch.cli:main

[coverage:run]
plugins = covdefaults

[coverage:paths]
source =
    swatch/

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
